syntax = "proto3";
option optimize_for = SPEED;

enum PROTOCOL
{

	ID_PKT_LOGIN_REQ = 0;
	ID_PKT_LOGIN_RES = 1; 
	ID_PKT_CREATE_ROOM_REQ = 5;
	ID_PKT_CREATE_ROOM_RES = 6;
	ID_PKT_ENTER_ROOM_REQ = 7;
	ID_PKT_ENTER_ROOM_RES = 8;
	ID_PKT_LEAVE_ROOM_REQ = 9;
	ID_PKT_LEAVE_ROOM_RES = 10;
	ID_PKT_BROADCAST_ROOM_MESSAGE_REQ = 11;
	ID_PKT_BROADCAST_ROOM_MESSAGE_RES = 12;
	ID_PKT_NEW_USER_IN_ROOM_NTY = 13;
};

enum ErrorCode
{

	Success = 0;
	DataBaseError = 1;
	LoginDuplicate = 2;
	SystemError = 3;
};